--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
 kotlin.code.style=official
-dataFileDir=/home/margaux/HEPL/Neurones/Datas
-modelFile=/tmp/model
+dataFileDir=C:\\TEMP\\Datas
+modelFile=C:\\TEMP\\model
